fix games page background on mobile

--- a/react-app/src/components/pages/Games/Games.css
+++ b/react-app/src/components/pages/Games/Games.css
@@ -14,7 +14,7 @@
   height: auto;
 	
   /* Set up positioning */
-  position: fixed;
+  /* position: fixed; */
   top: 0;
   left: 0; 
 }
@@ -75,12 +75,12 @@
 }
 @media all and (min-width: 768px){
 	#gameBackground {
-	  background-attachment: fixed;
+	  position:fixed;
 	}
   }
   @media all and (max-width: 768px){
     #gameBackground {
-    position:fixed;
+      background-attachment: scroll;
     }
   }
 
